--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     {% block head %}
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     {% block styles %}
     <!-- Bootstrap CSS -->
-    {{ bootstrap.load_css() }}
+    {{
+      bootstrap.load_css()
+    }}
+
     {% endblock %}
+
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v5.0"
+    ></script>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/61549f078d.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Quotes</title>
     {% endblock %}
   </head>
   <body>
     <!-- Your page content -->
-    {% block app_content %}{% endblock %}
-
-    {% block scripts %}
+    {% block app_content %}{% endblock %} {% block scripts %}
     <!-- Optional JavaScript -->
     {{ bootstrap.load_js() }}
     {% endblock %}
