--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,46 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
 
-{% from 'bootstrap/form.html' import render_form %}
+{%block styles %}
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='quote.css')}}">
+<style>
+
+  html {
+    background: url({{payload.image}}) no-repeat center center fixed;
+  }
+
+  .quote {
+    color: {{ payload.font_colour }};
+  }
+
+ 
+</style>
+
+{% endblock %} 
+
 {% block app_content %}
-<div class="row">
-<div class="col-md-4">
- Hier komt een mooie quote
-  {{payload}}
-</div>
+<div id="fb-root"></div>
+
+<div class="page-wrap" style="background: rgba({{ payload.image_colour_r }}, {{ payload.image_colour_g }}, {{ payload.image_colour_b }}, 0.6) ;">
+  <p class="quote">
+    {{ payload.quote }} <br /><br />
+    <i> &mdash; {{ payload.author }}</i
+    ><br /><br />
+
+    <div class="socials">
+      <a
+        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+        class="twitter-share-button"
+        data-text="{{ payload.quote }} - {{ payload.author }}"
+        data-url="{{ payload.url }}"
+        data-show-count="false"
+        >Tweet</a
+      >
+
+      <div class="fb-share-button" data-href="{{ payload.url }}" data-layout="button" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ payload.url }}%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Delen</a></div>
+      <a href="save" class="fas fa-save" style="color: {{payload.font_colour}}"></a>
+      <a href="{{url_for("core.index")}}" class="fas fa-random" style="color: {{payload.font_colour}}"></a>
+    </div>
+  </p>
 </div>
 
 {% endblock %}
