Prettified error messages a bit

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,28 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {%block styles %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{url_for('static', filename='quote.css')}}"
+/>
+<style>
+  html {
+    background: url(https://images.unsplash.com/photo-1519242220831-09410926fbff?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjk4NzE0fQ%27)
+      no-repeat center center fixed;
+  }
 
-{% block app_content %}
+  .quote {
+    color: #000000;
+  }
+</style>
 
-  <h1>Bestand niet gevonden</h1>
-  <p><a href="{{ url_for('core.index') }}">Terug</a></p>
+{% endblock %} {% block app_content %}
+<div id="fb-root"></div>
+
+<div class="page-wrap" style="background: rgba(255, 255, 255, 0.6) ;">
+  <p class="quote">
+    Bestand niet gevonden. <br />
+    <a href="{{ url_for('core.index') }}">Terug</a>
+  </p>
+</div>
 
 {% endblock %}
