--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 
 {%block styles %}
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='quote.css')}}">
+{{ super() }}
 <style>
 
   html {
