--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,13 +1,9 @@
-{% extends "base.html" %}
-
-{% from 'bootstrap/form.html' import render_form %}
-{% block app_content %}
+{% extends "base.html" %} {% import 'bootstrap/wtf.html' as wtf %} {% block
+app_content %}
 <h1>Login</h1>
-
 <div class="row">
-<div class="col-md-4">
-{{ render_form(form) }}
+  <div class="col-md-4">
+    {{ wtf.quick_form(form) }}
+  </div>
 </div>
-</div>
-
 {% endblock %}
