--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %} {%block styles %}
+{% extends "base.html" %} 
+
+{%block styles %}
+{{ super() }}
+
 <link
   rel="stylesheet"
   type="text/css"
@@ -6,7 +10,7 @@
 />
 <style>
   html {
-    background: url(https://images.unsplash.com/photo-1564457461758-8ff96e439e83?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjk4NzE0fQ)
+    background: url(https://images.unsplash.com/photo-1564457461758-8ff96e439e83?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2080&fit=max&ixid=eyJhcHBfaWQiOjk4NzE0fQ)
       no-repeat center center fixed;
   }
 
@@ -15,7 +19,9 @@
   }
 </style>
 
-{% endblock %} {% block app_content %}
+{% endblock %} 
+
+{% block app_content %}
 <div id="fb-root"></div>
 
 <div class="page-wrap" style="background: rgba(255, 255, 255, 0.6) ;">
