--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,30 +1,70 @@
-{% extends 'bootstrap/base.html' %} {% block title %} Quotes {% endblock %} {%
-block styles %}
+{% extends 'bootstrap/base.html' %} 
+
+{% block title %} Quotes {% endblock %} 
+
+{% block styles %}
 {{ super() }}
+
 <link
   rel="stylesheet"
   type="text/css"
   href="{{url_for('static', filename='quote.css')}}"
 />
 
-{% endblock %} {% block content %}
+{% endblock %} 
+
+{% block content %}
 <div class="container">
-  {% block app_content %}{% endblock %}
+  <div class="hamburger"  >
+    <div class="btn-group">
+      <button
+        type="button"
+        class="btn btn-default dropdown-toggle glyphicon glyphicon-menu-hamburger quote-menu"
+        style="border: none; background: gray;position: sticky; top:0;"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      ></button>
+      <ul class="dropdown-menu">
+          <li>
+              <a href="{{ url_for('core.index') }}"><i class="glyphicon glyphicon-home"></i> Home</a>
+            </li>
+        {% if current_user.is_anonymous %}
+          {% if image_view is defined %} 
+          <li>
+              <a href="{{ url_for('auth.login', quote_id=payload.quote_id, image_id=payload.image_id) }}"><i class="glyphicon glyphicon-log-in"></i> Login</a>
+            </li>
+            <li>
+              <a href="{{ url_for('auth.register') }}"><i class="glyphicon glyphicon-edit"></i> Register</a>
+            </li>
+          {% else %}
+          <li>
+              <a href="{{ url_for('auth.login') }}"><i class="glyphicon glyphicon-log-in"></i> Login</a>
+            </li>
+          {% endif %}
+        </li>
+        {% else %}
+        <li>
+          <a href="{{ url_for('core.myquotes') }}"><i class="glyphicon glyphicon-bookmark"></i> My quotes</a
+          >
+        </li>
+        <li>
+          <a
+            href="{{ url_for('auth.logout') }}"
+            ><i class="glyphicon glyphicon-log-out"></i> Log out</a
+          >
+        </li>
+
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+
+  {% block app_content %} {% endblock %}
 </div>
-{% endblock %} {% block scripts %}
-<script
-  async
-  defer
-  crossorigin="anonymous"
-  src="https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v5.0"
-></script>
-<script
-  async
-  src="https://platform.twitter.com/widgets.js"
-  charset="utf-8"
-></script>
-<script
-  src="https://kit.fontawesome.com/61549f078d.js"
-  crossorigin="anonymous"
-></script>
+
+{% endblock %} 
+
+{% block scripts %}
+{{ super() }}
 {% endblock %}
