--- a/app/static/quote.css
+++ b/app/static/quote.css
@@ -8,6 +8,8 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center fixed;
 }
 
 .page-wrap {
